src/test/Success/test_sym_if.c
int main(){
    int x = 0;
    int y = 1;
    if(x == 0){
        int x = 2;
        if(x == 2){
            y = 2;
        }
    }
}