src/test/Fail/test_redec3.c
int a;

int main(){
    func(a);
}

int func(int x){

}